<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@drawable/rect_layout"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_extSysName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="---"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_description_tickedId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_tickedId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="---"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_begin_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_extSysName" />

    <LinearLayout
        android:id="@+id/ll_begin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_tickedId">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_begin_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="end"
            android:text="---"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_begin_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="end"
            android:text="---"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_end_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="end"
            android:text="---"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>